Work done on 11/03/24. Mostly vibe coding.

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,8 +2,8 @@
     [metadata]
     name = realbt
     version = 0.1.0
-    description = A Python project
-    author = Your Name
+    description = RealBT is a Python package for backtesting trading strategies.
+    author = Yash Srivastava
     license = MIT
     [options]
     packages = find:
